--- a/server/pom.xml
+++ b/server/pom.xml
@@ -122,18 +122,30 @@
          <version>${version.arquillian}</version>
          <scope>test</scope>
       </dependency>
+
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+	<artifactId>gson</artifactId>
+	<version>2.2.4</version>
+      </dependency>
+
+      <dependency>
+	<groupId>com.episkipoe</groupId>
+	<artifactId>card-games-engine</artifactId>
+	<version>1.0-SNAPSHOT</version>
+      </dependency>
+
    </dependencies>
 
    <build>
       <finalName>${project.artifactId}</finalName>
       <plugins>
-         <!-- Compiler plugin enforces Java 1.5 compatibility -->
          <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>2.3.1</version>
             <configuration>
-               <source>1.5</source>
-               <target>1.5</target>
+               <source>1.8</source>
+               <target>1.8</target>
             </configuration>
          </plugin>
 
