--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -66,7 +66,7 @@
 
    <servlet-mapping>
       <servlet-name>Jersey Web Application</servlet-name>
-      <url-pattern>/rest/*</url-pattern>
+      <url-pattern>/*</url-pattern>
    </servlet-mapping>
    <!-- End Jersey JAX-RS configuration -->
 
